# poem4astarte

./: .gitignore  README.md  chat_database.db  index.html  main.js  pyproject.toml  style.css  syllabes.js
be/: eccezioni_metriche.db  pyproject.toml
be/src/: chat_app.py  estrazione-semantica-griglia.py  estrazione-semantica-html.py  estrazione-semantica.py  main.py  pdf-semantic-extraction copy.py  pdf-semantic-extraction.py  server copy.py  server.py  transformer.py
books/v4 - Il Mare Nero dell'Ein-Sof/: v4IlMareNerodellEinSof.html
books/v4 - Il Mare Nero dell'Ein-Sof (1)/: v4IlMareNerodellEinSof.html
fe/: cerva.txt  dea-syria-coldwave.txt  index.html  main.js  mater obscura.txt  poesia_analizzata (1).txt  poesia_analizzata (10).txt  poesia_analizzata (11).txt  poesia_analizzata (12).txt  poesia_analizzata (13).txt  poesia_analizzata (14).txt  poesia_analizzata (2).txt  poesia_analizzata (3).txt  poesia_analizzata (4).txt  poesia_analizzata (5).txt  poesia_analizzata (6).txt  poesia_analizzata (7).txt  poesia_analizzata (9).txt  poet2.html  style.css  syllabes.js
src/: server.py
test/: enhanced-poetry-analyzer.html  poet.html  poetry-analyzer (1).html  poetry-analyzer (2).html  poetry-analyzer.html
