[tool.poetry]
name = "poem4astarte"
version = "0.1.0"
description = ""
authors = ["Stefano Gargiulo <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
spacy = "^3.8.4"
spacy-syllables = "^3.0.2"
transformers = "^4.49.0"
torch = "^2.6.0"
python-docx = "^0.8.11"
pypdf2 = "^3.0.1"
nltk = "^3.9.1"
pyspellchecker = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
